--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "homepage": "https://martinpenkov.github.io/www-naroden-org",
+  "homepage": "https://MartinPenkov.github.io/www-naroden-org",
   "name": "simple-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d app",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
