update with content

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 # next.js
 /.next/
 /out/
+/output/
 
 # production
 /build
@@ -30,3 +31,6 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+#idea
+/.idea/
