--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
