--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@simplepdf/react-embed-pdf": "^1.8.1",
     "bootstrap": "^5.3.3",
     "next": "14.2.15",
     "react": "^18",
